[package]
name = "fvpnc"
version = "0.1.0"
edition = "2021"

[package.metadata]
bundle-assets = ["res"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.9.6"
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.6"
atty = "0.2.14"
sudo = "0.6.0"
sysinfo = "0.29.10"

